[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Item.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/crate.png-c387de9b883318ae36c9fd5a499c5602.stex"

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 142, 142 )

[node name="Crate" type="RigidBody2D"]
position = Vector2( 575, 920 )
input_pickable = true
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 6
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
texture = SubResource( 7 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_on_mouse_pressed"]
[connection signal="button_up" from="TextureButton" to="." method="_on_mouse_released"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_mouse_exited"]
